logs/scrapymon.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/greenlet'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.dist-info'...
Listing './lib/python3.5/site-packages/Flask_BasicAuth-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/Flask_Bootstrap-3.3.7.0.egg-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/dominate'...
Listing './lib/python3.5/site-packages/dominate-2.3.1.egg-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/flask_bootstrap'...
Listing './lib/python3.5/site-packages/flask_bootstrap/static'...
Listing './lib/python3.5/site-packages/flask_bootstrap/static/css'...
Listing './lib/python3.5/site-packages/flask_bootstrap/static/fonts'...
Listing './lib/python3.5/site-packages/flask_bootstrap/static/js'...
Listing './lib/python3.5/site-packages/flask_bootstrap/templates'...
Listing './lib/python3.5/site-packages/flask_bootstrap/templates/bootstrap'...
Listing './lib/python3.5/site-packages/gevent'...
Compiling './lib/python3.5/site-packages/gevent/_util_py2.py'...
***   File "./lib/python3.5/site-packages/gevent/_util_py2.py", line 8
    raise type, value, tb
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gevent/libev'...
Listing './lib/python3.5/site-packages/gevent-1.2.1.dist-info'...
Listing './lib/python3.5/site-packages/greenlet-0.4.12.dist-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/idna'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.13.0.dist-info'...
Listing './lib/python3.5/site-packages/scrapymon'...
Listing './lib/python3.5/site-packages/scrapymon/config'...
Listing './lib/python3.5/site-packages/scrapymon/static'...
Listing './lib/python3.5/site-packages/scrapymon/static/flat-ui'...
Listing './lib/python3.5/site-packages/scrapymon/static/flat-ui/css'...
Listing './lib/python3.5/site-packages/scrapymon/static/flat-ui/fonts'...
Listing './lib/python3.5/site-packages/scrapymon/static/flat-ui/fonts/glyphicons'...
Listing './lib/python3.5/site-packages/scrapymon/static/flat-ui/fonts/lato'...
Listing './lib/python3.5/site-packages/scrapymon/static/flat-ui/js'...
Listing './lib/python3.5/site-packages/scrapymon/static/index'...
Listing './lib/python3.5/site-packages/scrapymon/templates'...
Listing './lib/python3.5/site-packages/scrapymon/templates/index'...
Listing './lib/python3.5/site-packages/scrapymon/views'...
Listing './lib/python3.5/site-packages/scrapymon/views/index'...
Listing './lib/python3.5/site-packages/scrapymon-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/visitor'...
Listing './lib/python3.5/site-packages/visitor-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
